...

                <TextView
                    android:id="@+id/email_UserProfile_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/emailText_UserProfile_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePicture_UserProfile_imageView"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:contentDescription="profile picture"
                    android:contextClickable="false"
                    android:focusable="true"
...

                    <Button
                        android:id="@+id/removeImage_UserProfile_button"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
...

                    <Button
                        android:id="@+id/editImage_UserProfile_button"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
...

                <TextView
                    android:id="@+id/uniAccountClaimer_UserProfile_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <LinearLayout
              android:id="@+id/attributes_UserProfile_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/name_UserProfile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/name_UserProfile_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_UserProfile_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <LinearLayout
                    android:id="@+id/age_UserProfile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/age_UserProfile_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_UserProfile_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...

                <LinearLayout
                    android:id="@+id/phoneNumber_UserProfile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/phoneNumber_UserProfile_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...
                        android:text="@string/phoneNumberText"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/phoneNumber_UserProfile_editText"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
...

                <LinearLayout
                    android:id="@+id/gender_UserProfile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/gender_UserProfile_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...

                    <Spinner
                        android:id="@+id/gender_UserProfile_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...

                <Button
                  android:id="@+id/doneEditing_UserProfile_button"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
...

                <Button
                  android:id="@+id/editProfile_UserProfile_button"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
...
