<resources>
    <string name="Address">Address</string>
    <string name="Price">Price</string>
    <string name="app_name">AppArt</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="email_reset">Enter your email address</string>
    <string name="reset_button">Reset password</string>
    <string name="login_failed_snack">Login failed !</string>
    <string name="saveUserFail_Login">Failed to auto-save user, please log in again</string>
...
    <string name="dialog_phone">Phone number:</string>
    <string name="dialog_username">username</string>
    <string name="dialog_email">Email address:</string>
    <string name="dialog_close">Close</string>

    <!-- VirtualTourActivity stuff -->
    <string name="action_account">Account</string>
    <string name="action_logout">Log Out</string>
    <string name="action_map">Map</string>

    <!-- Strings for User Profile UI -->
    <string name="uniAccountClaimer">  UNI account  </string>
    <string name="backButtonText"> BACK </string>
...
    <string name="cameraButtonText">Camera</string>
    <string name="galleryButtonText">Gallery</string>
    <string name="createAccountPasswordFieldHint">Enter a password</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="backToLoginFromCreateButtonText">Back to login</string>
    <string name="createAccountEmailFieldHint">Enter an email</string>
    <string name="loginButtonText">Log In!</string>
    <string name="resetPasswordButtonText">Password Forgotten</string>
    <string name="createAccountFromLoginButtonText">Create account</string>
    <string name="resetConfirmationViewText">If this address is valid, you will receive a link to change your password</string>
    <string name="goToLoginFromResetButtonText">Log In Menu</string>
    <string name="loadingTextAdActivity">Loading…</string>
    <string name="editTitleAdCreation">Title</string>
...
    <string name="snackbarNotFilled_AdCreation">Some fields haven\'t been filled!</string>
    <string name="snackbarNoPhotos_AdCreation">Please add at least one image!</string>
    <string name="openAdCreationDescription_Scrolling">Open page for creating an ad</string>

    <!-- ScrollingActivity stuff -->
    <string name="searchDescription_Scrolling">Which city?</string>
    <string name="confirmCameraButtonText">Confirm</string>
    <string name="scrollingActivityAlertDialogMessage">Are you sure you want to log out ?</string>
    <string name="scrollingActivityAlertDialogPositiveButton">Yes</string>
    <string name="scrollingActivityAlertDialogNegativeButton">No</string>

    <!-- CameraActivity stuff -->
    <string name="canceledNoImage"> "Canceled: you did not upload any image " </string>
...
